# data_structures

./: .gitignore  CMakeLists.txt  check_execution_time.c  check_execution_time.h
double_linked_list/src/: dl_list.c  dl_list.h
double_linked_list/tests/: CMakeLists.txt
double_linked_list/tests/src/: DL_LIST_add_item.c  DL_LIST_create.c  DL_LIST_delete_item_at.c  DL_LIST_item_at.c  DL_LIST_size.c  dl_list_create_node.c  dl_list_delete_node.c  dl_list_foreach.c  dl_list_get_node.c
singly_linked_list/: CMakeLists.txt  example.c  main.c  sl_list_example.c
singly_linked_list/src/: sl_list.c  sl_list.h
singly_linked_list/tests/: CMakeLists.txt  build_tests.sh  run_tests.sh
singly_linked_list/tests/src/: SL_LIST_add_item.c  SL_LIST_apply_foreach.c  SL_LIST_create.c  SL_LIST_create_node.c  SL_LIST_delete.c  SL_LIST_delete_item_at.c  SL_LIST_item_at.c  SL_LIST_size.c  sl_list_foreach.c  test_add_position.c  test_apply_foreach.c  test_create_list.c  test_create_node.c  test_delete_item_at.c  test_delete_list.c  test_item_at.c  test_size.c
src/: CMakeLists.txt  singly_linked_list.c
src/double_linked_list/: CMakeLists.txt
src/double_linked_list/src/: dl_list.c  dl_list.h
src/double_linked_list/tests/: CMakeLists.txt
src/double_linked_list/tests/src/: dl_list_create_node.c  dl_list_delete_node.c  dl_list_get_node.c
src/include/: singly_linked_list.h
src/singly_linked_list/: CMakeLists.txt  sl_list_example.c
src/singly_linked_list/tests/: CMakeLists.txt  run_tests.sh
src/singly_linked_list/tests/src/: SL_LIST_add_item.c  SL_LIST_apply_foreach.c  SL_LIST_create.c  SL_LIST_create_node.c  SL_LIST_delete.c  SL_LIST_delete_item_at.c  SL_LIST_item_at.c  SL_LIST_size.c  sl_list_foreach.c
